echo-tailscale/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: echo-ts
  namespace: default
spec:
  ingressClassName: tailscale
  defaultBackend:
    service:
      name: echo
      port:
        number: 80
